Создано с помощью Colaboratory

--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "tukXE1xCcd2P"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "eJpbHdAlgcZP"
       },
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 1,
       "metadata": {
         "id": "1lc98MyQPG-H"
       },
@@ -912,14 +912,7 @@
         "\n",
         "\n",
         "\n",
-        "    # TODO: implement metrics!\n",
-        "    # Some helpful links:\n",
-        "    # https://en.wikipedia.org/wiki/Precision_and_recall\n",
-        "    # https://en.wikipedia.org/wiki/F1_score\n",
         "\n",
-        "    \"\"\"\n",
-        "    YOUR CODE IS HERE\n",
-        "    \"\"\"\n",
         "    pass\n",
         "\n",
         "\n",
@@ -1505,7 +1498,7 @@
       "metadata": {
         "id": "9ufLTJvODbsz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1524,7 +1517,7 @@
         "id": "0h9C5Oz6Buou",
         "outputId": "6b3f96d9-ab06-4127-9ee2-1ee088ef432a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1835,7 +1828,7 @@
         "id": "N5HRRdCwEXH4",
         "outputId": "dd92ac09-bdba-4e22-e343-580beeddfa93"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1936,7 +1929,7 @@
         "id": "P4j98HV6Mhm1",
         "outputId": "2a49f910-a02a-46d8-e1a8-27fa07f8b84d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1985,7 +1978,7 @@
         "id": "X9gDp_TpNDSy",
         "outputId": "aaa233d2-8665-4eb9-98f5-2ee03e02c2c0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2014,7 +2007,7 @@
         "id": "qLCgVTR_YP0X",
         "outputId": "b469bdac-0d80-4469-9386-f26a29161aae"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2332,7 +2325,7 @@
       "metadata": {
         "id": "_T2pPqUVY4Ls"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2357,7 +2350,7 @@
         "id": "huEOZVfJaKWT",
         "outputId": "ae31b2ca-9405-44b3-9f58-f6a44dee227b"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2393,7 +2386,7 @@
         "id": "ak_shx-ciU3z",
         "outputId": "17bab489-2263-42c6-c68f-531bf933cc5a"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2431,7 +2424,7 @@
         "id": "OO8_4qH-frcw",
         "outputId": "5bff48b2-e99d-49b0-d59a-387428fd4c76"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2457,7 +2450,7 @@
         "id": "ru4NKqF4ke0N",
         "outputId": "36ed13a0-f4d2-4c91-e470-9fbe20896745"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2483,7 +2476,7 @@
         "id": "1e7zZ9hol6cl",
         "outputId": "dfa0f66b-72ce-4f93-a8cf-6607816bc659"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2509,7 +2502,7 @@
         "id": "Lcso2W5ie8Qt",
         "outputId": "aa6aa7f2-e0cb-4bc8-ca81-cdf925e40708"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2535,7 +2528,7 @@
         "id": "UXwY9sXcfrcK",
         "outputId": "9df2ac1e-b9ea-4c3a-87a9-9cf9c0b41914"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2561,7 +2554,7 @@
         "id": "D9NN_PAPf1Gi",
         "outputId": "39dd86a7-fb38-45cd-b016-636eca2eeeba"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2612,7 +2605,7 @@
         "id": "10tx2txRf37r",
         "outputId": "ba6c0aba-ef1e-4a8c-ef07-81955949a36f"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2649,7 +2642,7 @@
         "id": "Cjf6s7LKlDAG",
         "outputId": "54c70591-7b58-4471-b1ee-0baa7d0bf492"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2781,15 +2774,22 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "СОЦИАЛИЗАЦИЯ\n"
       ],
       "metadata": {
-        "id": "91FLdZFoqWwH"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "maUcwfRErYXA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://drive.google.com/file/d/1M9r_jhKH5Py00IsAMvK2B9f3VnQZugK8/view?usp=sharing"
+      ],
+      "metadata": {
+        "id": "jKpdQYfBtbH1"
+      }
     }
   ],
   "metadata": {
@@ -2797,7 +2797,7 @@
       "collapsed_sections": [],
       "name": "KNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwCjAxNpP5omStw2cyfOkj",
+      "authorship_tag": "ABX9TyMx0Vd6FAmb8bahckUkpmxr",
       "include_colab_link": true
     },
     "kernelspec": {
